[package]
name = "openhub-shell"
version.workspace = true
edition.workspace = true

[dependencies]
openhub-common.workspace = true
openhub-api-types.workspace = true
openhub-net.workspace = true
openhub-system.workspace = true
openhub-runtime.workspace = true
async-trait.workspace = true
axum.workspace = true
open.workspace = true
which.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
openhub-db.workspace = true
http-body-util.workspace = true
sqlx.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
wiremock.workspace = true
