[package]
name = "openhub-system"
version.workspace = true
edition.workspace = true

[dependencies]
openhub-auth.workspace = true
openhub-common.workspace = true
openhub-db.workspace = true
openhub-net.workspace = true
openhub-api-types.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
tokio.workspace = true
aws-config.workspace = true
aws-sdk-bedrock.workspace = true
semver.workspace = true
dirs.workspace = true

[dev-dependencies]
tower = { workspace = true }
http-body-util.workspace = true
reqwest.workspace = true
wiremock = "0.6"
