[package]
name = "openhub-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
openhub-common.workspace = true
openhub-db.workspace = true
openhub-api-types.workspace = true
openhub-realtime.workspace = true
openhub-auth.workspace = true
openhub-runtime.workspace = true
openhub-knowledge.workspace = true
openhub-file.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dashmap.workspace = true
async-trait.workspace = true
portable-pty.workspace = true
base64.workspace = true
libc.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true
reqwest.workspace = true
