[package]
name = "openhub-webhook"
version.workspace = true
edition.workspace = true

[dependencies]
openhub-common.workspace = true
openhub-db.workspace = true
openhub-net.workspace = true
openhub-api-types.workspace = true
openhub-auth.workspace = true
openhub-requirement.workspace = true
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
sqlx = { workspace = true }
